java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testMakeClassAbstract1.pass
package org.netbeans.test.java.hints;

public abstract class MakeClassAbstract1 {
    
    public MakeClassAbstract1() {
    }
    
    public abstract void test();
    
}
